[package]
name = "zssh"
edition = "2021"
version = "0.2.1"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "Minimal SSH server for embedded applications."
documentation = "https://docs.rs/zssh"
repository = "https://github.com/TomCrypto/zssh"
license = "MIT"
readme = "README.md"
categories = ["embedded", "network-programming", "no-std", "no-std::no-alloc"]
keywords = ["ssh", "security", "cryptography"]
exclude = ["/examples"]

[dependencies]
aes = { version = "0.8", default-features = false }
constant_time_eq = { version = "0.3", default-features = false }
ctr = { version = "0.9", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false }
embedded-io-async = { version = "0.6", default-features = false }
hmac = { version = "0.12", default-features = false, features = ["reset"] }
rand = { version = "0.8", default-features = false }
sha2 = { version = "0.10", default-features = false }
x25519-dalek = { version = "2.0", default-features = false }

[dev-dependencies]
embedded-io-async = { version = "0.6", features = ["std"] }
hex = "0.4"
rand = { version = "0.8", features = ["std"] }
tokio = { version = "1.36", features = ["net", "io-util", "rt-multi-thread", "macros"] }
